# fraud-detection-mlops

./: .gitignore  pyproject.toml  test-gemini-trigger.md  test_bad_code.py
services/data_pipeline/application/: use_cases.py
services/data_pipeline/domain/: models.py  repositories.py  services.py
services/data_pipeline/infrastructure/: csv_parser.py  feature_engineering.py  local_repository.py  s3_repository.py  validators.py
services/data_pipeline/interface/airflow/: .env.example  Dockerfile  docker-compose.yaml  tasks.py
services/data_pipeline/interface/airflow/dags/: fraud_detection_dag.py
shared/domain/: events.py
shared/infrastructure/: config.py
tests/data_pipeline/: test_use_cases.py
tests/data_pipeline/domain/: test_models.py  test_services.py
tests/data_pipeline/infrastructure/: conftest.py  test_csv_parser.py  test_feature_engineering.py  test_local_repository.py  test_s3_repository.py  test_validators.py
tests/data_pipeline/interface/airflow/: conftest.py  test_dag.py  test_tasks.py
tests/shared/domain/: test_events.py
