[project]
name = "fraud-detection-mlops"
version = "0.1.0"
description = "Fraud Detection MLOps Pipeline"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "moto[s3]>=5.0",
]

[tool.setuptools.packages.find]
include = ["services*", "shared*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
